--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.18.1",
     "mdbvue": "^5.5.0",
     "quasar": "^1.0.0-beta.0",
-    "vue-i18n": "^7.3.3"
+    "vue-i18n": "^7.3.3",
+    "vue2-google-maps": "^0.10.6"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0-beta.0",
