--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
+    "bootstrap-vue": "^2.0.0-rc.24",
     "mdbvue": "^5.5.0",
     "quasar": "^1.0.0-beta.0",
     "vue-i18n": "^7.3.3",
