--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-vue": "^2.0.0-rc.24",
     "mdbvue": "^5.5.0",
     "quasar": "^1.0.0-beta.0",
+    "vue-axios": "^2.1.4",
     "vue-i18n": "^7.3.3",
     "vue2-google-maps": "^0.10.6"
   },
