--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "quasar": "^1.0.0-beta.0",
     "vue-axios": "^2.1.4",
     "vue-i18n": "^7.3.3",
+    "vue-simple-calendar": "^4.2.2",
     "vue2-google-maps": "^0.10.6"
   },
   "devDependencies": {
@@ -26,7 +27,9 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.10.0",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^5.0.0"
+    "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0"
   },
   "engines": {
     "node": ">= 8.9.0",
