--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@google/markerclusterer": "^1.0.3",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
     "bootstrap-vue": "^2.0.0-rc.24",
