--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@google/markerclusterer": "^1.0.3",
+    "@pderas/vue2-geocoder": "^1.1.0",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
     "bootstrap-vue": "^2.0.0-rc.24",
