--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "quasar": "^1.0.0-beta.0",
     "vue-axios": "^2.1.4",
     "vue-i18n": "^7.3.3",
+    "vue-jwt-decode": "^0.1.0",
     "vue-simple-calendar": "^4.2.2",
     "vue2-google-maps": "^0.10.6"
   },
