--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
     "bootstrap-vue": "^2.0.0-rc.24",
+    "google-maps-api-loader": "^1.1.1",
     "mdbvue": "^5.5.0",
     "quasar": "^1.0.0-beta.0",
     "vue-axios": "^2.1.4",
