--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
   "dependencies": {
     "@google/markerclusterer": "^1.0.3",
     "@pderas/vue2-geocoder": "^1.1.0",
-    "@quasar/extras": "^1.0.0",
+    "@quasar/extras": "^1.2.0",
     "axios": "^0.18.1",
-    "bootstrap-vue": "^2.0.0-rc.24",
+    "bootstrap-vue": "^2.0.0-rc.27",
     "google-maps-api-loader": "^1.1.1",
-    "mdbvue": "^5.5.0",
-    "quasar": "^1.0.0-beta.0",
+    "mdbvue": "^5.7.0",
+    "quasar": "^1.0.5",
     "vue-axios": "^2.1.4",
     "vue-i18n": "^7.3.3",
     "vue-jwt-decode": "^0.1.0",
     "vue-simple-calendar": "^4.2.2",
-    "vue2-google-maps": "^0.10.6"
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0-beta.0",
+    "@quasar/app": "^1.0.4",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.10.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-vue": "^5.2.3",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0"
   },
